# E-voting_sytem

./: .gitignore  AGENT_BUILD_BRIEF.md  README.md  render.yaml
shared/: merkle.test.ts  merkle.ts  package-lock.json  package.json
soroban-evoting/: Cargo.toml
soroban-evoting/contracts/evoting/: Cargo.toml
soroban-evoting/contracts/evoting/src/: lib.rs  test.rs
soroban-evoting/contracts/evoting/test_snapshots/test/: close_after_slash_rejected.1.json  close_election_blocks_new_votes.1.json  close_election_refunds_bond_to_admin.1.json  create_election_pays_fee_and_locks_bond.1.json  create_election_rejects_low_bond.1.json  deadline_enforced.1.json  double_initialize_rejected.1.json  extend_election_pushes_deadline_and_allows_late_votes.1.json  extend_election_rejects_closed_or_slashed.1.json  extend_election_rejects_earlier_or_equal_deadline.1.json  extend_election_rejects_non_admin.1.json  extend_preserves_personhood_requirement.1.json  initialize_records_config.1.json  invalid_option_rejected.1.json  invalid_proof_rejected.1.json  personhood_off_ignores_registry.1.json  register_and_create_election.1.json  require_personhood_allows_attested_voter.1.json  require_personhood_blocks_unattested_voter.1.json  require_personhood_without_registry_fails.1.json  slash_after_close_rejected.1.json  slash_before_grace_period_rejected.1.json  slash_election_pays_keeper_and_treasury_after_grace.1.json  valid_member_can_vote_and_double_vote_rejected.1.json
ussd-bridge/: .dockerignore  .env.example  Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.json
(+69 files in other folders)
